deployments/github/service-https.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lab-app-java-svc
  labels:
    app: lab-app-java
spec:
  type: LoadBalancer
  selector:
    app: lab-app-java
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
