deployments/github/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: lab-app-java-service
  namespace: default
  labels:
    app: lab-app-java
spec:
  ports:
    - port: 8090
      protocol: TCP
      targetPort: 8080
  selector:
    app: lab-app-java
  type: LoadBalancer
